# add35mmFocalLength

./: LICENSE  Makefile  README.md  add35mmFocalLength.c  exif-textver.bat  exif-textver.csv  initdb.c  sample_main.c
WinGUI/: MainDlg.h  add35mmFocalLengthGUI.rc  add35mmFocalLengthGUI.sln  add35mmFocalLengthGUI.vcxproj  resource.h  stdafx.h
WinGUI/NSIS/: LICENSE.txt  setup.nsi
imgui-1.49/examples/: .gitignore
imgui-1.49/examples/sdl_opengl_example/: .gitignore  CMakeLists.txt  c.sqlite  main.cpp
